app/src/main/java/com/example/httperrorhandling/network/errors/UnauthorizedException.kt
package com.example.httperrorhandling.network.errors

class UnauthorizedException : Exception("User is unauthorized")